--- a/mysite/frenin/templates/frenin/reggin.html
+++ b/mysite/frenin/templates/frenin/reggin.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-        <h1>Get In with Frenin</h1>
+        <h1>Get In with Reggin</h1>
+        <h3>With Reggin you are being registered and logged in isntantly</h3>
+        <p>Username must be an existing summoner's name</p>
 
         {% if registered %}
         <strong>thank you for registering!</strong>
